Bug 14216 - vfs_ceph_snapshots fails to find snapdir for relative paths at share root
Summary: vfs_ceph_snapshots fails to find snapdir for relative paths at share root
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-13 09:42 UTC by David Disseldorp
Modified: 2020-01-15 09:27 UTC (History)
1 user (show)

See Also:


Attachments
fix, currently undergoing testing (1.71 KB, patch)
2019-12-13 10:08 UTC, David Disseldorp
no flags Details
upstream fix, backported for v4-11-test (1.82 KB, patch)
2019-12-20 17:37 UTC, David Disseldorp
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Disseldorp 2019-12-13 09:42:56 UTC
For file paths relative to root, ceph_snap_get_parent_path() may return
an empty parent dir string, in which case the CephFS snashot path should
be ".snap".
Comment 2 David Disseldorp 2019-12-13 10:08:53 UTC
Created attachment 15682 [details]
fix, currently undergoing testing
Comment 3 David Disseldorp 2019-12-15 22:55:29 UTC
(In reply to David Disseldorp from comment #2)
> Created attachment 15682 [details]
> fix, currently undergoing testing

submitted via:
https://gitlab.com/samba-team/samba/merge_requests/1004
Comment 4 David Disseldorp 2019-12-20 17:37:24 UTC
Created attachment 15719 [details]
upstream fix, backported for v4-11-test
Comment 5 Jeremy Allison 2019-12-20 23:50:26 UTC
Re-assigning to Karolin for inclusion in 4.11.next.

David, do you want this for 4.10.next also ?
Comment 6 David Disseldorp 2019-12-21 00:51:35 UTC
(In reply to Jeremy Allison from comment #5)
> Re-assigning to Karolin for inclusion in 4.11.next.

Thanks a lot for your review Jeremy :-)

> David, do you want this for 4.10.next also ?

It's not needed - vfs_ceph_snapshots is only carried in the v4-11+ branches.
Comment 7 Karolin Seeger 2020-01-14 08:21:32 UTC
(In reply to Jeremy Allison from comment #5)
Pushed to autobuild-v4-11-test.
Comment 8 Karolin Seeger 2020-01-15 09:27:57 UTC
(In reply to Karolin Seeger from comment #7)
Pushed to v4-11-test.
Closing out bug report.

Thanks!